# hotbox

./: .gitignore  README.md
config/: system.yaml
controller/: README.md  pyproject.toml
controller/src/hotbox_controller/: __init__.py  app.py  calibration.py  calibration_solver.py  config.py  geometry.py  gps.py  main.py  mirror_fleet.py  protocol.py  scene.py  sun.py  tracking.py  transport.py
controller/src/hotbox_controller/web/static/: index.html
controller/tests/: test_gps.py  test_protocol.py  test_scene.py  test_sun.py  test_supervisor_mode.py  test_tracking.py
electrical/: actuator_pinout.txt
firmware/: README.md  platformio.ini
firmware/include/: hotbox_geometry.h
firmware/src/: axis.cpp  axis.h  config.h  main.cpp  protocol.cpp  protocol.h
mechanical/: 3D Printed Mirror Support_0,0.3mf  3D Printed Mirror Support_0,1.3mf  3D Printed Mirror Support_0,2.3mf  3D Printed Mirror Support_1,1.3mf  3D Printed Mirror Support_1,2.3mf  3D Printed Mirror Support_jig.3mf  3D Printed Motor Support.3mf
shared/: README.md  pyproject.toml
shared/src/hotbox_shared/: __init__.py  aiming.py  firmware_header.py  load.py  mount.py  site_time.py  system.py  vectors.py
shared/tests/: test_aiming.py  test_site_time.py  test_system.py
sim/: README.md  pyproject.toml
sim/src/: controller.py  flat_mirror_grid.py  geometry.py  main.py  mirror.py  mirror_grid_design.py  rays.py  simulation.py  sun.py  visualizer.py
sim/tests/: __init__.py  test_flat_mirror_grid_mount.py
sim_full_raytrace/: README.md  pyproject.toml
sim_full_raytrace/src/: __init__.py  absorber.py  controller.py  flat_mirror_grid.py  main.py  rays.py  simulation.py  sun.py
sim_full_raytrace/tests/: __init__.py  test_day_times.py  test_system_config.py
sim_in_the_loop/: README.md  pyproject.toml
sim_in_the_loop/src/hotbox_sitl/: __init__.py  actuator.py  harness.py  main.py  mirror_node.py  optics.py  scenario.py  transport.py
sim_in_the_loop/tests/: test_harness.py
