[project]
name = "hotbox-controller"
version = "0.1.0"
description = "Main Raspberry Pi controller for the Hot-Box solar oven."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "hotbox-shared",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
    "pvlib>=0.11.0",
    "pytest>=8.3.0",
    "pyserial>=3.5",
    "python-can>=4.5.0",
    "pyyaml>=6.0.2",
    "scipy>=1.11.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
hotbox-controller = "hotbox_controller.main:main"

[tool.uv.sources]
hotbox-shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotbox_controller"]
