[project]
name = "hotbox-sim"
version = "0.1.0"
description = "Simple raytrace optical simulation for the baked and happy hot-box."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "plotly>=5.24.0",
    "pvlib>=0.11.0",
    "scipy>=1.11.0",
]

[project.scripts]
hotbox-sim = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
