[project]
name = "hotbox-sim-full-raytrace"
version = "0.1.0"
description = "Simple raytrace optical simulation for the baked and happy hot-box."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hotbox-shared",
    "numpy>=2.0.0",
    "plotly>=5.24.0",
    "pvlib>=0.11.0",
    "scipy>=1.11.0",
]

[tool.uv.sources]
hotbox-shared = { path = "../shared", editable = true }

[project.scripts]
hotbox-sim-full-raytrace = "src.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
