[project]
name = "hotbox-sim-in-the-loop"
version = "0.1.0"
description = "Fast in-the-loop simulation for Hot-Box firmware and controller."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hotbox-controller",
    "numpy>=2.0.0",
    "pvlib>=0.11.0",
]

[tool.uv.sources]
hotbox-controller = { path = "../controller", editable = true }

[project.scripts]
hotbox-sim-in-the-loop = "hotbox_sitl.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotbox_sitl"]
